Bug 1205911 - P1. Cancel pending demux request when searching for next keyframe. r=edwin, a=sylvestre

--HG--
extra : source : dc97158a13f10990503d0d8ffa554f6f74659018